ajustando algumas coisas

--- a/1. Fundamentos/1-periodo/Secao-02/Dia-1.3-HTML&CSS-Seletores-e-posicionamento/combinacoes_classes-descendentes/style.css
+++ b/1. Fundamentos/1-periodo/Secao-02/Dia-1.3-HTML&CSS-Seletores-e-posicionamento/combinacoes_classes-descendentes/style.css
@@ -34,6 +34,11 @@ li {
     background-color: pink;
 }
 
+#one:hover {
+    font-weight: bold;
+    color: orangered;
+}
+
 #two:hover {
     font-weight: bold;
     color: rgb(55, 223, 33);
@@ -53,5 +58,11 @@ li {
     font-weight: bold;
     color: green;
 }
+
+a {
+    text-decoration: none;
+}
+
+
 
 
